fix: hide modal Don’t fall behind after submit email

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -992,23 +992,26 @@ main {
       z-index: 1;
       @media (max-width: 992px) {
         font-size: 40px;
+        line-height: 60px;
       }
       @media (max-width: 767px) {
         font-size: 40px;
-        line-height: 48px;
+        line-height: 40px;
         margin-bottom: 130px;
       }
     }
     .year{
       overflow:auto;
       display:inline-block;
-      height:67px;
+      height: 67px;
+      width: 70px !important;
       vertical-align: middle;
       @media (max-width: 992px) {
-        height: 60px;
+        height: 64px;
+        width: 52px !important;
       }
       @media (max-width: 767px) {
-        height: 38px;
+        height: 56px;
       }
       /* width */
       &::-webkit-scrollbar {
@@ -1030,11 +1033,11 @@ main {
         display:none;
       }
       ul{
-        animation-name: hovered;
+        /* animation-name: hovered;
         animation-duration: 10s;
         animation-iteration-count: infinite;
         animation-timing-function: linear; 
-        animation-delay: 3s;
+        animation-delay: 3s; */
         list-style: none;
         margin-bottom: 0;
         padding-left: 0;
@@ -1150,11 +1153,11 @@ main {
                 display:none;
               }
               ul{
-                animation-name: hovered;
+                /* animation-name: hovered;
                 animation-duration: 10s;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
-                animation-delay: 3s;
+                animation-delay: 3s; */
                 list-style: none;
                 margin-bottom: 0;
                 padding-left: 0;
@@ -1255,11 +1258,11 @@ main {
                 display:none;
               }
               ul{
-                animation-name: hovered;
+                /* animation-name: hovered;
                 animation-duration: 10s;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
-                animation-delay: 3s;
+                animation-delay: 3s; */
                 list-style: none;
                 margin-bottom: 0;
                 padding-left: 0;
